--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://amilabandara1994.github.io/nike/dist",
+  "homepage": "http://amilabandara1994.github.io/nike",
   "name": "nike",
   "private": true,
   "version": "0.0.0",
